
09/21/10 (Jennifer)
Moved database-specific error handling from DbCompatibility to subclass MySQLCompatibility.

09/16/10 (Jennifer)
Applied patch submitted by Asheesh Laroia, modifying QuadD and DbCompatibility to support SQL PreparedStatement's.

09/14/10 (Jennifer)
Changed the .classpath file to the "regular" type (rather than maven-esque) so it refers only to the libraries included in the project.
Maven users can overwrite it in their local workspace by using the command "mvn eclipse:clean eclipse:eclipse" (thanks to Tim for that info!).

Release 0.9.3
-------------

02/10/10 (timp)
Upgrade to Jena 0.6.2
Ensure pom and build.xml work with Hudson
disable failing tests

11/24/09 (Olaf)
Added the possibility for conditional GET requests during dereferencing.
Added the HTTP response header fields to the DereferencingResult.

09/21/09 (Jennifer)
Changed SWPSignatureUtilities and SWPAuthorityImpl to not chunk digests (add carriage return after 76 characters).  This is consistent with the behavior of the sun library digest method that was replaced in NG4J version 0.9.2.

08/27/09 (Olaf)
Added a SPARQL query engine for the identifier based graph implementation. This was necessary because query processing was changed with the latest version of the ARQ engine so that query execution performance couldn't benefit from our ID-based BGP query evaluation (see commit from 05/24/09). The new engine is as fast as old ARQ with the ID-based BGP evaluation. Furthermore, the new engine enables a true integration of ID-based query evaluation in the Semantic Web Client Library which is impossible with the ID-based BGP evaluation approach due to the way ARQ executes queries.

08/26/09 (Olaf)
Changed the API of IdBasedGraph (replaced getId and getNode by getNodeDictionary).

Release 0.9.2
-------------

08/16/09 (Olaf)